attempting to get html in rows displaying correctly. added alignment for hour to css

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,9 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+ 
+  align-items: center;
+  text-align: center;
 }
 
 .past {
